add ? hover text

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@ D-i-m-i work done on mask icons
           <div class="controls-card" style="width:88vw; max-width: 400px; height:fit-content; min-height: 226px; margin-top: 0px">
             <div class="card-headings">
               <p class="h2-local">Ventilation</p>
-              <span class="hovertext" text-hover="This is the placholder text for the card description">
+              <span class="hovertext" text-hover="Ventilation, ie. the injection of air into the room, is assumed to be from mechanical sources.
+              The ventilation rate is given in terms of Air Exchanges per Hour (ACH), which measures the amount of fresh air injected into the room in an hour as a fraction of the room's volumes.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
             </div>
@@ -148,7 +149,8 @@ D-i-m-i work done on mask icons
           <div class="controls-card" style="width:88vw; max-width: 400px; height:fit-content; min-height: 226px; margin-bottom: 20px;">
             <div class="card-headings">
               <p class="h2-local">Event</p>
-              <span class="hovertext" text-hover="This is the placholder text for the card description">
+              <span class="hovertext" text-hover="We assume that the room is free of the virus at the beginning of the event.
+              If a break is added during the event, we assume that everyone leaves the room during the break and the mechanical ventilation settings are unchanged.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
             </div>
@@ -198,7 +200,8 @@ D-i-m-i work done on mask icons
               <h2 class="h2-local">3D room and air circulation illustration</h2>
             </div>
             <div style="margin-top: 5px;">
-              <span class="hovertext" text-hover="This is the placholder text for the card description">
+              <span class="hovertext" text-hover="An illustration of the assumption of the recirculating loop formed in the room by the mechanical ventilation.
+              In the blue part of the loop, the air is travelling left to right, while in the green part of the loop, the air is travelling right to left.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
             </div>
@@ -218,7 +221,8 @@ D-i-m-i work done on mask icons
       <div name="advanced-options" id="advanced-options" class="advanced-card" style="display:none;">
         <div class="card-headings">
           <p class="h2-local">Advanced Options</p>
-          <span class="hovertext" text-hover="This is the placholder text for the card description">
+          <span class="hovertext" text-hover="Advanced Options deal with properties that are dependent on the virus. 
+          The default values are some of the possible values for SARS-CoV-19.">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
           </span>
         </div>
@@ -318,7 +322,9 @@ D-i-m-i work done on mask icons
               <p class="h2-local">Dynamic 2D room representation</p>
             </div>
             <div style="margin-top: 5px;">
-              <span class="hovertext" text-hover="This is the placholder text for the card description">
+              <span class="hovertext" text-hover="This shows a 2D image of the floor area of the room, and the positions of the infected and susceptible person in the room.
+              To manipulate the dimensions of the room or the position of people, you may either use the controls on the corresponding cards
+              or click and drag the bottom right corner of the room or the person icons.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
             </div>
@@ -343,7 +349,7 @@ D-i-m-i work done on mask icons
               <div class="controls-card" style="margin-top: 0; margin-bottom: 10px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
                 <div class="card-headings">
                   <p class="h2-local">Room dimensions</p>
-                  <span class="hovertext" text-hover="This is the placholder text for the card description">
+                  <span class="hovertext" text-hover="The dimensions of the rectangular room.">
                     <img src="images/info_mark.png" alt="card information" class="question-mark">
                   </span>
                 </div>
@@ -398,7 +404,7 @@ D-i-m-i work done on mask icons
             <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; margin-bottom: 10px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
             <div class="card-headings">
               <p class="h2-local">Infectious person</p>
-              <span class="hovertext" text-hover="This is the placholder text for the card description">
+              <span class="hovertext" text-hover="Control the position of the infectious person, what they are doing and the type of mask they are wearing.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
             </div>
@@ -451,7 +457,7 @@ D-i-m-i work done on mask icons
             <div class="controls-card" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 0px; width: var(--room-cards-width); max-width: var(--room-cards-max-width);">
               <div class="card-headings">
                 <p class="h2-local">Susceptible person</p>
-                <span class="hovertext" text-hover="This is the placholder text for the card description">
+                <span class="hovertext" text-hover="Control the position of the susceptible person, what they are doing and the type of mask they are wearing.">
                   <img src="images/info_mark.png" alt="card information" class="question-mark">
                 </span>
               </div>
