change default mask pic to be 'No'

--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@ D-i-m-i work done on mask icons
               <div style="display: flex;">
                 <div style="margin-bottom: 10px">
                   <img src="images/infected_person.png" alt="infectious_person_illustration" style="aspect-ratio: 1/1; width: 40px;">
-                  <span class="mask_pic" id="inf_mask_pic"></span>
+                  <span class="mask_pic" id="inf_mask_pic">No</span>
                 </div>
                 <div>
                   <img src="images/susceptible_person.png" alt="susceptible_person_illustration" style="aspect-ratio: 1/1; width: 40px;">
-                  <span class="mask_pic" id="occ_mask_pic"> </span>
+                  <span class="mask_pic" id="occ_mask_pic"> No </span>
                 </div>
               </div>
             </div>
