formatted ? texts and font to sans-serif

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ D-i-m-i work done on mask icons
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="sheet/webapp_style.css">
+    <link rel="stylesheet" href="sheet/webapp_style_sans_serif.css">
     <link rel="stylesheet" href="sheet/hovertext_style.css">
     <!-- CSS only -->
 
@@ -221,7 +221,7 @@ D-i-m-i work done on mask icons
       <div name="advanced-options" id="advanced-options" class="advanced-card" style="display:none;">
         <div class="card-headings">
           <p class="h2-local">Advanced Options</p>
-          <span class="hovertext" text-hover="Advanced Options deal with properties that are dependent on the virus. 
+          <span class="hovertext" text-hover="Advanced Options deal with properties that are dependent on the virus.
           The default values are some of the possible values for SARS-CoV-19.">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
           </span>
