moved schematic to banner

--- a/index_schematic_banner.html
+++ b/index_schematic_banner.html
@@ -92,8 +92,9 @@ D-i-m-i work done on mask icons
         </div>
         <div class="embedded-video col" style="min-height: 285px;">
           <!-- <img src="images/virus.jpg" alt="virus_illustration" style="height: 406px;"> -->
-          <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
           <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 100%; border-radius: 12px;">
         </div>
       </div>
     <!-- </div> -->
@@ -110,8 +111,7 @@ D-i-m-i work done on mask icons
           <div class="controls-card" style="width:88vw; max-width: 400px; height:fit-content; min-height: 226px; margin-top: 0px">
             <div class="card-headings">
               <p class="h2-local">Ventilation</p>
-              <span class="hovertext" 
-              text-hover="Ventilation, ie. the injection of air into the room, is assumed to be from mechanical sources.
+              <span class="hovertext" text-hover="Ventilation, ie. the injection of air into the room, is assumed to be from mechanical sources.
               The ventilation rate is given in terms of Air Exchanges per Hour (ACH), which measures the amount of fresh air injected into the room in an hour as a fraction of the room's volumes.">
                 <img src="images/info_mark.png" alt="card information" class="question-mark">
               </span>
@@ -207,9 +207,9 @@ D-i-m-i work done on mask icons
               </span>
             </div>
           </div>
-          <div class="room-air-illustration">
+          <!-- <div class="room-air-illustration">
             <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 100%; border-radius: 12px;">
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -222,7 +222,7 @@ D-i-m-i work done on mask icons
       <div name="advanced-options" id="advanced-options" class="advanced-card" style="display:none;">
         <div class="card-headings">
           <p class="h2-local">Advanced Options</p>
-          <span class="hovertext" text-hover="Advanced Options deal with properties that are dependent on the virus. 
+          <span class="hovertext" text-hover="Advanced Options deal with properties that are dependent on the virus.
           The default values are some of the possible values for SARS-CoV-19.">
             <img src="images/info_mark.png" alt="card information" class="question-mark">
           </span>
@@ -342,7 +342,7 @@ D-i-m-i work done on mask icons
                 </div>
                 <div>
                   <img src="images/susceptible_person.png" alt="susceptible_person_illustration" style="aspect-ratio: 1/1; width: 40px;">
-                  <span class="mask_pic" id="occ_mask_pic">No </span>
+                  <span class="mask_pic" id="occ_mask_pic"> No </span>
                 </div>
               </div>
             </div>
@@ -655,7 +655,7 @@ D-i-m-i work done on mask icons
           </div>
       </div>
       <footer style="margin-top: 10px">Credits</footer>
-      <!-- <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a> -->
+      <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a>
     </div>
       <script src='script/webapp_form.js'></script>
       <script src="script/webapp_room.js"></script>
