--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ D-i-m-i work done on mask icons
           </div>
       </div>
       <footer style="margin-top: 10px">Credits</footer>
-      <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a>
+      <a href="index_schematic_banner.html" target="_blank">'Schematic in banner' version</a>
     </div>
       <script src='script/webapp_form.js'></script>
       <script src="script/webapp_room.js"></script>
