illustration in banner and responsiveness tweeks

--- a/archive_html/index_video_placeholder.html
+++ b/archive_html/index_video_placeholder.html
@@ -92,9 +92,8 @@ D-i-m-i work done on mask icons
         </div>
         <div class="embedded-video col" style="min-height: 285px;">
           <!-- <img src="images/virus.jpg" alt="virus_illustration" style="height: 406px;"> -->
-          <!-- <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          <iframe width="90%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!-- <iframe width="100%" height="100%" src="https://www.youtube.com/embed/udfSJ1wj1YE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-          <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 100%; border-radius: 12px;">
         </div>
       </div>
     <!-- </div> -->
@@ -207,9 +206,9 @@ D-i-m-i work done on mask icons
               </span>
             </div>
           </div>
-          <!-- <div class="room-air-illustration">
+          <div class="room-air-illustration">
             <img src="images/air_circulation.png" alt="air_circulation_schematic" style="width: 100%; border-radius: 12px;">
-          </div> -->
+          </div>
         </div>
       </div>
 
@@ -655,7 +654,7 @@ D-i-m-i work done on mask icons
           </div>
       </div>
       <footer style="margin-top: 10px">Credits</footer>
-      <a href="index_sans_serif.html" target="_blank">Click for Sans-Serif version</a>
+      <a href="index_schematic_banner.html" target="_blank">'Schematic in banner' version</a>
     </div>
       <script src='script/webapp_form.js'></script>
       <script src="script/webapp_room.js"></script>
